# tic-tic-toe

./: .gitignore  CMakeLists.txt  LICENSE  README.md
TicTacToe/: AiPlayer.h  AiStrategy.h  Board.cpp  Board.h  CMakeLists.txt  Game.h  HumanPlayer.h  MiniMaxStrategy.cpp  MiniMaxStrategy.h  MonteCarloStrategy.cpp  MonteCarloStrategy.h  Player.h  TicTacToe.cpp  TicTacToe.h  common.h
